# tdjson

./: .gitattributes  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: before-all-mac.sh  before-all.sh  build_wheels-macos.yml  build_wheels.yml
examples/: tdjson_example.py
tdjson/: __init__.py  tdjson.cpp
