[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tdjson"
version = "0.0.0"
description = "High-performance Python binding for TDLib JSON interface. Works on Linux x86_64, includes pre-built TDLib, and outperforms python ctypes"
readme = "README.md"
authors = [{ name = "AYMEN Mohammed", email = "let.me.code.safe@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["tdlib", "telegram", "python-binding", "high-performance", "linux"]

[project.urls]
Source = "https://github.com/AYMENJD/tdjson"
Tracker = "https://github.com/AYMENJD/tdjson/issues"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.cibuildwheel]
build-verbosity = 1
build = "cp39* cp310* cp311* cp312* cp313*"
enable = ["cpython-freethreading"]
skip = "*musllinux*"
archs = ["x86_64"]

[tool.cibuildwheel.linux]
before-all = ".github/workflows/before-all.sh"
manylinux-x86_64-image = "manylinux2014"
